@@ -37,7 +37,10 @@ while true; do
     if [ "$oldhash" != "$newhash" ]; then
         pdflatex --halt-on-error --interaction=nonstopmode "$src" | colorize || senderror 'pdflatex failed'
         echo
-        echo "Press Enter to force a recompilation"
+        echo "Your options:"
+        echo "[Enter]: manually restart"
+        echo "[Ctrl+C]: quit"
+        echo
         oldhash="$newhash"
     else
         if read -t 0; then
