@@ -1,3 +1,7 @@
+2014-09-15	Erik E. Lorenz	<erik.e.lorenz@gmail.com>
+
+	* src/latexrefre.sh: description text added
+
 2014-09-12	Erik E. Lorenz	<erik.e.lorenz@gmail.com>
 
 	* src/latexrefre.sh: "Press Enter" added
